--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>My Resume</title>
 </head>
 <body>
+
     <div class="jumbotron jumbotron-fluid header filler">
     <h1 class="display-1 text-center">Jonathan Hill</h1>
 
@@ -21,10 +22,10 @@
         <div class="container">
           <button class="navbar-toggler bg-dark" data-toggle="collapse" data-target="#mainNav">
         
-            <span class="navbar-toggler-icon">g</span></button>
+            <span class="navbar-toggler-icon">ICON</span></button>
             <div class="collapse navbar-collapse" id="mainNav">
               <div class="navbar-nav">
-                <a href="" class="nav-item nav-link active text-white">About</a>
+                <a href="#about" class="nav-item nav-link active text-white">About</a>
                 <a href="" class="nav-item nav-link text-white">Education</a>
                 <a href="" class="nav-item nav-link text-white">Experience</a>
                 <a href="" class="nav-item nav-link text-white">Interests</a>
@@ -36,13 +37,13 @@
         </nav>
   </div>
     </nav>
-<div class="header2"></div>
+<div class="header2"></div><div class="about" id="about"></div>
 
 
 <hr>
 <div class="mainpage">
 <!-- About Me --> 
-    <div class="bodysection"><div class="about" id="about"></div>
+    <div class="bodysection">
     <h2>About Me</h2><hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia facere aspernatur eaque deserunt maiores quod minima incidunt placeat inventore, quas aut perspiciatis amet velit eligendi similique sit labore atque? Libero tempore atque rem omnis distinctio id, ut doloribus sit aspernatur!</p>
     <div class="gbanner">
@@ -58,14 +59,14 @@
 </div>
 <!-- edu -->
     <div class="bodysection">
-    <h2>About Me</h2><hr>
+    <h2>Experience</h2><hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia facere aspernatur eaque deserunt maiores quod minima incidunt placeat inventore, quas aut perspiciatis amet velit eligendi similique sit labore atque? Libero tempore atque rem omnis distinctio id, ut doloribus sit aspernatur!</p>
     <div class="gbanner">
     <img src="gfr.png" alt="" width="" height="">
 </div>
 <!-- About Me -->
     <div class="bodysection">
-    <h2>About Me</h2><hr>
+    <h2>Interests</h2><hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia facere aspernatur eaque deserunt maiores quod minima incidunt placeat inventore, quas aut perspiciatis amet velit eligendi similique sit labore atque? Libero tempore atque rem omnis distinctio id, ut doloribus sit aspernatur!</p>
     <div class="gbanner">
     <img src="gfr.png" alt="" width="" height="">
