--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>My Resume</title>
 </head>
 <body>
-
+<div class="about" id="about"></div>
     <div class="jumbotron jumbotron-fluid header filler">
     <h1 class="display-1 text-center">Jonathan Hill</h1>
 
@@ -26,10 +26,10 @@
             <div class="collapse navbar-collapse" id="mainNav">
               <div class="navbar-nav">
                 <a href="#about" class="nav-item nav-link active text-white">About</a>
-                <a href="" class="nav-item nav-link text-white">Education</a>
-                <a href="" class="nav-item nav-link text-white">Experience</a>
-                <a href="" class="nav-item nav-link text-white">Interests</a>
-                <a href="" class="nav-item nav-link text-white">Skills</a>
+                <a href="#edu" class="nav-item nav-link text-white">Education</a>
+                <a href="#exp" class="nav-item nav-link text-white">Experience</a>
+                <a href="#int" class="nav-item nav-link text-white">Interests</a>
+                <a href="#skills" class="nav-item nav-link text-white">Skills</a>
               </div>
             </div>
           </button>
@@ -37,7 +37,7 @@
         </nav>
   </div>
     </nav>
-<div class="header2"></div><div class="about" id="about"></div>
+<div class="header2"></div>
 
 
 <hr>
@@ -45,51 +45,46 @@
 <!-- About Me --> 
     <div class="bodysection">
     <h2>About Me</h2><hr>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia facere aspernatur eaque deserunt maiores quod minima incidunt placeat inventore, quas aut perspiciatis amet velit eligendi similique sit labore atque? Libero tempore atque rem omnis distinctio id, ut doloribus sit aspernatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero non dolores nemo iste aspernatur distinctio labore provident esse consequuntur explicabo dolorem ab, tempore, sequi aut possimus, voluptatem culpa blanditiis earum voluptates. Voluptates blanditiis, fugiat expedita, eos, quidem consequuntur ea voluptate quo enim eveniet nisi? Quaerat vero quasi quod perspiciatis distinctio?</p>
     <div class="gbanner">
     <img src="gfr.png" alt="" width="" height="">
 </div>
-
-<!-- edu --> 
+ 
+<!-- edu --> <div class="edu" id="edu"></div>
     <div class="bodysection edu" id="edu">
     <h2 >Education</h2><hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia facere aspernatur eaque deserunt maiores quod minima incidunt placeat inventore, quas aut perspiciatis amet velit eligendi similique sit labore atque? Libero tempore atque rem omnis distinctio id, ut doloribus sit aspernatur!</p>
     <div class="gbanner">
     <img src="gfr.png" alt="" width="" height="">
 </div>
-<!-- edu -->
+<!-- exp --><div class="exp" id="exp"></div>
     <div class="bodysection">
     <h2>Experience</h2><hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia facere aspernatur eaque deserunt maiores quod minima incidunt placeat inventore, quas aut perspiciatis amet velit eligendi similique sit labore atque? Libero tempore atque rem omnis distinctio id, ut doloribus sit aspernatur!</p>
     <div class="gbanner">
     <img src="gfr.png" alt="" width="" height="">
 </div>
-<!-- About Me -->
+<!-- int --><div class="int" id="int"></div>
     <div class="bodysection">
     <h2>Interests</h2><hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia facere aspernatur eaque deserunt maiores quod minima incidunt placeat inventore, quas aut perspiciatis amet velit eligendi similique sit labore atque? Libero tempore atque rem omnis distinctio id, ut doloribus sit aspernatur!</p>
     <div class="gbanner">
     <img src="gfr.png" alt="" width="" height="">
 </div>
-<!-- About Me -->
-    <div class="bodysection">
-    <h2>About Me</h2><hr>
+<!-- skills --><div class="skills" id="skills"></div>
+    <div class="bodysection"></div>
+    <h2>Skills</h2><hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia facere aspernatur eaque deserunt maiores quod minima incidunt placeat inventore, quas aut perspiciatis amet velit eligendi similique sit labore atque? Libero tempore atque rem omnis distinctio id, ut doloribus sit aspernatur!</p>
     <div class="gbanner">
     <img src="gfr.png" alt="" width="" height="">
 </div>
-<!-- About Me -->
-    <div class="bodysection">
-    <h2>About Me</h2><hr>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia facere aspernatur eaque deserunt maiores quod minima incidunt placeat inventore, quas aut perspiciatis amet velit eligendi similique sit labore atque? Libero tempore atque rem omnis distinctio id, ut doloribus sit aspernatur!</p>
-    <div class="gbanner">
-    <img src="gfr.png" alt="" width="" height="">
-</div>
-</div>
+<br><br><hr>
+
 
 </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+<script src="test.js"></script>
 </body>
 </html>
