--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 <div class="header2"></div>
 
 
-<hr>
+<hr class="specialhr">
 <div class="mainpage">
+<hr>
 <!-- About Me --> 
     <div class="bodysection">
     <h2>About Me</h2><hr>
