--- a/index.html
+++ b/index.html
@@ -56,8 +56,15 @@
     <h2 >Education</h2><hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia facere aspernatur eaque deserunt maiores quod minima incidunt placeat inventore, quas aut perspiciatis amet velit eligendi similique sit labore atque? Libero tempore atque rem omnis distinctio id, ut doloribus sit aspernatur!</p>
     <div class="gbanner">
+
     <img src="gfr.png" alt="" width="" height="">
 </div>
+    <ul><li><img src="/QVh1pMUT.jpg" alt="" class="rlogo"></li></ul>
+    <hr>
+    <ul><li><img src="/cstate-logo.png" alt="" class="rlogo"></li></ul>
+    <hr>
+
+
 <!-- exp --><div class="exp" id="exp"></div>
     <div class="bodysection">
     <h2>Experience</h2><hr>
@@ -65,6 +72,16 @@
     <div class="gbanner">
     <img src="gfr.png" alt="" width="" height="">
 </div>
+<ul><li><img src="/lowes-logo.jpg" alt="" class="rlogo"></li></ul>
+<hr>
+<ul><li><img src="/larosas-logo_900.jpg" alt="" class="rlogo"></li></ul>
+<hr>
+<ul><li><img src="/DJJ.jpg" alt="" class="rlogo"></li></ul>
+<hr>
+<ul><li><img src="/hUWLegz9.jpg" alt="" class="rlogo"></li></ul>
+<hr>
+<ul><li><img src="brand_x_xavier_1205.jpg" alt="" class="rlogo"></li></ul>
+<hr>
 <!-- int --><div class="int" id="int"></div>
     <div class="bodysection">
     <h2>Interests</h2><hr>
@@ -80,7 +97,10 @@
     <img src="gfr.png" alt="" width="" height="">
 </div>
 <br><br><hr>
+<!-- <div class="donate"><form action="https://www.youtube.com/watch?v=i__7EJYEZ9s&list=LL&index=5">$
+<input type="text" placeholder="hhh"><button class="btn ">Donate</button> <div class="donation"> </div> -->
 
+</form></div>
 
 </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
