--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="bodysection">
     <h2>About Me</h2><hr>
     <ul>
-        <li><img src="img/PLACEHOLDER.jpg" alt="" class="rlogo"></li>
+        <li><img src="img/jonny.jpg" alt="" class="rlogo"></li>
         <li><h3>Jonathan Hill</h3></li>
         <li><hr class="subhr"></li>
         <li><p>I lived in Cincinnati, Ohio since I was born. I'm a 20 year old graphic designer and website developer. I'm currently learning Web Development at Kable Academy. </p></li>
