--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="bodysection">
     <h2>About Me</h2><hr>
     <ul>
-        <li><img src="jonny.jpg" alt="" class="rlogo"></li>
+        <li><img src="img/jonny.jpg" alt="" class="rlogo"></li>
         <li><h3>Jonathan Hill</h3></li>
         <li><hr class="subhr"></li>
         <li><p>I lived in Cincinnati, Ohio since I was born. I'm a 20 year old graphic designer and website developer. I'm currently learning Web Development at Kable Academy. </p></li>
@@ -63,12 +63,12 @@
     <h2 >Education</h2><hr>
 
 
-
+    <img src="img/img/gfr.png" alt="" width="" height="">
 </div>
 
 <ul>
         <h3>Kable Academy</h3>
-    <li><img src="Kable-Academy.jpg" alt="" class="rlogo"></li>
+    <li><img src="img/Kable-Academy.jpg" alt="" class="rlogo"></li>
     <li><h3>September 2021 - Current</h3></li>
     <li><hr class="subhr"></li>
     <li><p>I discovered Kable Academy through friends that either talked about it or went through the program themselves. I was teetering on the thought of jumping back into a class setting and learning Web Development. I love being able to make websites and design them while being able to show them off and let people know they are my own!</p></li>
@@ -76,7 +76,7 @@
 
     <ul>
             <h3>Cincinnati State</h3>
-        <li><img src="cstate-logo.png" alt="" class="rlogo"></li>
+        <li><img src="img/cstate-logo.png" alt="" class="rlogo"></li>
         <li><h3>August 2019 - May 2020</h3></li>
         <li><hr class="subhr"></li>
         <li><p>I majored in graphic design and took part in attending a Gamer's Club on campus. I learned HTML and CSS in a Web Design class I took my second semester up at Cincinnati State.</p></li>
@@ -84,7 +84,7 @@
 
     <ul>
             <h3>DePaul Cristo Rey High School</h3>
-        <li><img src="DPCR.jpg" alt="" class="rlogo"></li>
+        <li><img src="img/DPCR.jpg" alt="" class="rlogo"></li>
         <li><h3>August 2015 - May 2019</h3></li>
         <li><hr class="subhr"></li>
         <li><p>DePaul Cristo Rey is a private Catholic school that prioritizes prepping students for college. DPCR also has a program that places students at different jobs around the area to give them work experience. I was awarded with "Perfect Attendance", "Second Honors", and multiple different work study programs awards. I also started a Game Club my freshman year where me and classmates would just play games, lay back, and have lots of fun!</p></li>
@@ -101,7 +101,7 @@
 
 <ul>
         <h3>Lowe's</h3>
-<ul><li><img src="lowes-logo.jpg" alt="" class="rlogo"></li></ul>
+<ul><li><img src="/img/lowes-logo.jpg" alt="" class="rlogo"></li></ul>
 <li><h3>September 2021 - Current</h3></li>
 <li><hr class="subhr"></li>
 <li><p>Working in the Outside Lawn and Garden department is somewhat physically demanding because of the heavy merchandise you have to load in vehicles or carts. This job has also shown me how to operate a forklift and be certified to use it at that store.</p></li>
@@ -109,7 +109,7 @@
  
 <ul>
         <h3>Larosa's</h3>
-<ul><li><img src="larosas-logo_900.jpg" alt="" class="rlogo"></li></ul>
+<ul><li><img src="/img/larosas-logo_900.jpg" alt="" class="rlogo"></li></ul>
 <li><h3>September 2019 - April 2021</h3></li>
 <li><hr class="subhr"></li>
 <li><p>This job was a fast paced work environment where I had to multitask, be quick on my feet, and properly communicate throughout the entire shift. I also was assigned to stock the walk in freezer and the walk in cooler on certain days.</p></li>
@@ -117,7 +117,7 @@
  
 <ul>
         <h3>David J. Joseph Company</h3>
-<ul><li><img src="DJJ.jpg" alt="" class="rlogo"></li></ul>
+<ul><li><img src="/img/DJJ.jpg" alt="" class="rlogo"></li></ul>
 <li><h3>August 2018 - May 2019</h3></li>
 <li><hr class="subhr"></li>
 <li><p>I worked here as a student worker in the DePaul Cristo Rey High School corporate work study program. I learned and used Microsoft Excel in order to sort information and projects.</p></li>
@@ -125,7 +125,7 @@
  
 <ul>
     <h3>Michelman</h3>
-<ul><li><img src="MICHELMAN.jpg" alt="" class="rlogo"></li></ul>
+<ul><li><img src="/img/MICHELMAN.jpg" alt="" class="rlogo"></li></ul>
 <li><h3>August 2017 - May 2018</h3></li>
 <li><hr class="subhr"></li>
 <li><p>I worked here as a student worker in the DePaul Cristo Rey High School corporate work study program. I was at the front desk taking calls and letting people into the office area.</p></li>
@@ -133,7 +133,7 @@
  
 <ul>
     <h3>Xavier University</h3>
-<ul><li><img src="XAVIER.jpg" alt="" class="rlogo"></li></ul>
+<ul><li><img src="/img/XAVIER.jpg" alt="" class="rlogo"></li></ul>
 <li><h3>August 2016 - May 2017</h3></li>
 <li><hr class="subhr"></li>
 <li><p>I worked here as a student worker in the DePaul Cristo Rey High School corporate work study program. I helped around the learning commons and student registrar by running office errands or entering in information in Microsoft Word or Excel.</p></li>
@@ -149,7 +149,7 @@
     <h2>Interests</h2><hr>
     <h3>My main interests are graphic design and web development!</h3>
     <div class="gbanner">
-    <img src="gfr.png" alt="" width="" height="">
+    <img src="img/gfr.png" alt="" width="" height="">
     <p>Since I can't really draw or program video games yet (something I would love to do), I'm often using design as a way to express myself. I am very fond of having the ability to customize and get creative with the web pages and designs I create!</p>
 
 </div>
@@ -161,7 +161,7 @@
 <!-- skills -->
     <div class="bodysection"></div>
     <h2>Skills</h2><hr>
-    <img src="skills.png" alt="" class="gbanner">
+    <img src="/img/skills.png" alt="" class="gbanner">
     <p>After attending classes at Cincinnati State and Kable Academy, the coding languages I've learned are listed below</p>
 <div class="skill-list">
     <hr class="subhr">
@@ -185,14 +185,14 @@
     <h3>Here are some of the wonderful projects that I've taken time to code and create in classes or in my free time!</h3>
 <br>
 <h3>GitHub Overview</h3>
-<a href="https://github.com/JonathanHill513" target="_blank"><img src="github home.png" alt="" class="gbanner"></a>
+<a href="https://github.com/JonathanHill513" target="_blank"><img src="/img/github home.png" alt="" class="gbanner"></a>
 
 <hr class="subhr">
 <p>There are only a couple of projects that got some spotlight in this web page but you can find others that I haven't inserted into this web page HERE!</a></p><br>
 
 <br>
 <h3>Hello World </h3>
-<a href="https://jonathanhill513.github.io/hello-world/" target="_blank"><img src="helloworld.png" alt="" class="gbanner"></a>
+<a href="https://jonathanhill513.github.io/hello-world/" target="_blank"><img src="/img/helloworld.png" alt="" class="gbanner"></a>
 
 <h3> September 27th 2021</h3>
 <hr class="subhr">
@@ -200,21 +200,21 @@
 
 <br>
 <h3>About Me</h3> 
-<a href="https://jonathanhill513.github.io/About-Me/" target="_blank"><img src="aboutme.png" alt="" class="gbanner"></a>
+<a href="https://jonathanhill513.github.io/About-Me/" target="_blank"><img src="/img/aboutme.png" alt="" class="gbanner"></a>
 <h3> September 29th 2021</h3>
 <hr class="subhr">
 <p>This is a project where I experiment with having multiple pages link to each other. This is also the first project where I've implemented a lot of CSS into it. Click the picture above to open it in a new window!</a></p><br>
 
 <br>
 <h3>Mad-Libs</h3>
-<a href="https://jonathanhill513.github.io/Mad-Libs/" target="_blank"><img src="madlibs.png" alt="" class="gbanner"></a>
+<a href="https://jonathanhill513.github.io/Mad-Libs/" target="_blank"><img src="/img/madlibs.png" alt="" class="gbanner"></a>
 <h3> October 1st 2021</h3>
 <hr class="subhr">
 <p>A project where I messed around and linked JavaScript to the HTML. This is my first web development project where JavaScript plays a big role, resulting in the web page's content being very interactive! Click the picture above to open it in a new window!</a></p><br>
 
 <br>
 <h3>Product Landing Page</h3>
-<a href="https://jonathanhill513.github.io/Product-Landing-Page/" target="_blank"><img src="ducksonly.png" alt="" class="gbanner"></a>
+<a href="https://jonathanhill513.github.io/Product-Landing-Page/" target="_blank"><img src="/img/ducksonly.png" alt="" class="gbanner"></a>
  <h3> October 4th 2021</h3>
 <hr class="subhr">
 <p>A project where I created a fixed navigation bar and added a embed YouTube video onto the HTML file. Click the picture above to open it in a new window!</a></p><br>
